proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/ctrl_break.py
def f():
    for x in range(5):
        print x
        if x == 3:
            break
    print 'hello'

f()
