proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/func_bad_break.py
def checker(x):
    if x > 5:
        break
    print x

checker(10)
